--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.40"
+clap = { version = "4.5.32", features = ["derive"] }
+env_logger = "0.11.7"
+log = "0.4.26"
+regex = "1.11.1"
+rustls = "0.23.23"
+rustls-pemfile = "2.2.0"
+thiserror = "2.0.12"
+tokio = { version = "1.44.1", features = ["full"] }
+tokio-rustls = "0.26.2"
